styles.css
body {
    display: flex;
    flex-direction: column;
    background-color: #FFFFFF;
    align-content: center;
}

a {
    text-decoration: none;
    color: black;
}

header {
    background-color: #CCCCCC;
    display: flex;
    height: 96px;
    justify-content: space-between;
    width: 100vw;
    align-content: center;
    padding: 24px 100px;
    margin: 0;
}

header section div a {
    font-size: 16px;
    line-height: 24px;
    color: black;
    text-decoration: none;
}

.logo {
    font-size: 24px;
    color: #15803D;
}

.nav {
    width: 478px;
    height: 48px;
    gap: 40px;
    display: flex;
    text-align: center;
    align-content: center;
}

.home {
    width: 96px;
    height: 48px;
    padding: 12px 24px;
    border-radius: 8px;
}

.hiw {
    width: 153px;
    height: 48px;
    border-radius: 8px;
    padding: 12px 24px;
}

.mk {
    width: 151px;
    height: 48px;
    border-radius: 8px;
    padding: 12px 24px;
}

header section {
    width: 296px;
    height: 48px;
    margin-right: 16px;
    gap: 10px;
    align-content: center;
}

.acct {
    width: 296px;
    height: 48px;
}

h1 {
    text-align: center;
}

.container {
    height: 48px;
    width: 140px;
    padding: 12px 24px;
    border: 1px solid #34A853;
    background-color: #FFFFFF;
    border-radius: 8px;
    display: flex;
    align-content: center;
}

.login {
    color: #15803D;
    text-decoration: none;
    font-size: 16px;
    line-height: 24px;
    align-content: center;
}

.signup {
    color: #FFFFFF;
    text-decoration: none;
    font-size: 16px;
    line-height: 24px;
    align-content: center;
}

.container-1 {
    height: 48px;
    width: 140px;
    padding: 12px 24px;
    background-color: #15803D;
    border-radius: 8px;
    display: flex;
    align-content: center;
}

h1 {
    font-size: 64px;
    font-style: semibold;
    line-height: 80px;
    font-weight: 600;
    font: poppins;
    align-content: center;
    margin: 0;
    text-align: center;
}

p {
    justify-content: center;
    font-size: 24px;
    color: #3C383E;
    font-style: regular;
    text-align: center;
    margin: 0;
}

body section {
    display: flex;
    justify-content: center;
    align-content: center;
}

.container-2 {
    background-color: #FFFFFF;
    width: 178px;
    height: 48px;
    border-radius: 8px;
    border: 1px solid #34A853;
    padding: 12px 24px;
    margin: 10px;
}

.jaf {
    color: #15803D;
    font-size: 16px;
    line-height: 24px;
}

.container-3 {
    background-color: #15803D;
    width: 224px;
    height: 48px;
    padding: 12px 24px;
    border-radius: 8px;
    margin: 10px;
}

.bap {
    color: #FFFFFF;
    font-size: 16px;
    line-height: 24px;
}

.container-4 {
    width: 100vw;
    height: 606px;
}

.container-5 {
    width: 1440px;
    height: 394px;
    padding: 0px 16px;
    display: flex;
    align-content: center;
    flex-direction: column;
    gap: 10px;
}

h2 {
    color: #333333
    font-size: 40px;
    line-height: 36px;
    text-align: center;
}

.wcf {
    font-size: 20px;
    line-height: 36px;
    color: #3C383E;
}

.container-6 {
    width: 100vw;
    height: 256px;
    display: flex;
    justify-content: space-between;
    gap: 10px;
    align-content: center;
}

.container-7 {
    width: 386.67px;
    height: 256px;
    border-radius: 8px;
    padding: 24px;
    flex-direction: coloumn;
    background-color: #F9FAFB;
    margin: 0px 10px 0px 0px;
    gap: 12px;
}

h4 {
    font-style: bold;
    font-size: 16px;
    color: #333333;
    line-height: 24px;
    text-align: center;
}

.txt {
    font-size: 14px;
    line-height: 24px;
    color: #3C383E;
}

.container-8 {
    width: 1440px;
    height: 747px;
    padding: 100px 0px;
    display: flex;
    flex-direction: column;
}

.hfw {
    font-size: 40px;
    line-height: 36px;
    font-style: bold;
    text-align: center;
    color: #333333;
}

.text2 {
    font-size: 20px;
    line-height: 36px;
    font-style: medium;
    text-align: center;
    color: #3C383E;
}

.container-9 {
    height: 325px;
    width: 608px;
    gap: 24px;
    display: flex;
    flex-direction: column;
}

.container-10 {
    display: flex;
    justify-content: space-between;
    gap: 24px;
    height: 416px;
    width: 1440px;
    padding: 40px 100px;
}

.for {
    font-style: medium;
    font-size: 28px;
    line-height: 34px;
    color: #363A49;
    text-align: center;
}

.container-11 {
    background-color: #EAFAF0;
    height: 303px;
    width: 1440px;
    padding: 60px 100px;
    justify-content: space-between;
    display: flex;
    gap: 24px;
}

.container-12 {
    background-color: #FFFFFF;
    height: 183px;
    width: 397.33px;
    align-content: center;
    padding: 8px;
    border-radius: 24px;
    gap: 13px;
}

.c12 {
    font-size: 34px;
    color: #15803D;
    text-align: center;
    font-style: medium;
}

.c12-text {
    color: #3C383E;
    font-size: 16px;
    text-align: center;
}

